move migration to Evolve

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
 	"dotnet.defaultSolution": "notion.sln",
-	"git.ignoreLimitWarning": true
+	"git.ignoreLimitWarning": true,
+	"editor.indentSize": 4
 }
