--- a/tests/notion.dal.tests/notion.dal.tests.csproj
+++ b/tests/notion.dal.tests/notion.dal.tests.csproj
@@ -10,6 +10,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
+    <PackageReference Include="Npgsql" Version="7.0.4" />
+    <PackageReference Include="testcontainers" Version="3.4.0" />
+    <PackageReference Include="Testcontainers.PostgreSql" Version="3.4.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -23,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\notion.dal\notion.dal.csproj" />
+    <ProjectReference Include="..\..\notion.migrations\notion.migrations.csproj" />
   </ItemGroup>
 
 </Project>
