--- a/notion.dal/notion.dal.csproj
+++ b/notion.dal/notion.dal.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="dapper" Version="2.0.143" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\utils\utils.csproj" />
+  </ItemGroup>
+
 </Project>
