--- a/notion.dal/notion.dal.csproj
+++ b/notion.dal/notion.dal.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\utils\utils.csproj" />
+    <ProjectReference Include="..\notion.models\notion.models.csproj" />
   </ItemGroup>
 
 </Project>
