functionning first endpoint

--- a/notion.api/appsettings.json
+++ b/notion.api/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning"
+		}
+	},
+	"ConnectionStrings": {
+		"postgres": "host=localhost;Database=public;User Id=postgres;"
+	},
+	"AllowedHosts": "*"
 }
