--- a/notion.api/notion.api.csproj
+++ b/notion.api/notion.api.csproj
@@ -1,5 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+  <ItemGroup>
+    <ProjectReference Include="..\notion.services\notion.services.csproj" />
+    <ProjectReference Include="..\notion.dal\notion.dal.csproj" />
+    <ProjectReference Include="..\notion.migrations\notion.migrations.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Npgsql" Version="7.0.4" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
