--- a/notion.api/notion.api.csproj
+++ b/notion.api/notion.api.csproj
@@ -5,6 +5,13 @@
     <ProjectReference Include="..\notion.dal\notion.dal.csproj" />
     <ProjectReference Include="..\notion.migrations\notion.migrations.csproj" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>notion.api.tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Npgsql" Version="7.0.4" />
